users emb incremental correction

--- a/mab2rec/testes_incremental_users_emb.ipynb
+++ b/mab2rec/testes_incremental_users_emb.ipynb
@@ -526,7 +526,7 @@
     "\n",
     "    for _, row in interactions_df.iterrows():\n",
     "        user_id = row[\"user_id\"]\n",
-    "        contexts.append(users_embeddings[user_id])\n",
+    "        contexts.append(users_embeddings[user_id][:FACTORS])\n",
     "\n",
     "    return contexts"
    ]
@@ -691,7 +691,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa8b7d24c06d4a23bc7bb2067d6708ad",
+       "model_id": "20970927ef0e4b829ce976070d8e7907",
        "version_major": 2,
        "version_minor": 0
       },
@@ -712,7 +712,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a554028f5b754fbfb10c24654304bd42",
+       "model_id": "7db06a1fb54e472d99f2a8daac6023bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -735,13 +735,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_18200\\2425623891.py:45: SettingWithCopyWarning: \n",
+      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_20664\\2425623891.py:45: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  initial_df_train['als_context'] = als_contexts[:len(initial_df_train)]\n",
-      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_18200\\2425623891.py:46: SettingWithCopyWarning: \n",
+      "C:\\Users\\gregf\\AppData\\Local\\Temp\\ipykernel_20664\\2425623891.py:46: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -752,7 +752,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2528824a317d41e184e5cbb392aa259f",
+       "model_id": "cd6b99966a24433797a6e6f16054bfb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,7 +774,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c0309753ee14c10bd9d38ec2f833498",
+       "model_id": "74a6776785e749199ef672e20b3aa4cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -805,7 +805,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e69c3008ff6458da955b482821a03ea",
+       "model_id": "c2e0385778cb48218ccc158069c9b6b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,7 +827,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58d16b0bdd3446cba87dfec414ba6deb",
+       "model_id": "1898c939f2144583a508d16c5a241176",
        "version_major": 2,
        "version_minor": 0
       },
@@ -858,7 +858,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f0ddd6b5eab482aa8fa83c00bbef046",
+       "model_id": "f9aaea3b6cbc4f4897648d1ab0bf678f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -880,7 +880,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7d463f2d20549118f14788e697153b4",
+       "model_id": "64d36a5681ff4e74bdba2821794b5bd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -911,7 +911,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e37114f360c248558e132f4937357077",
+       "model_id": "fc30277f4e0a4d65b4eee61069f74a6b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -933,7 +933,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a8fc18344344e9e83450271c7367949",
+       "model_id": "036e3fe75c83400a850d2ac2422929ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -964,7 +964,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ea9366180ce4f3d9fda2c0fddd06399",
+       "model_id": "f74bbfb7055f4c2aa2d0a96e12cf99ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -986,7 +986,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb140b302e6141678291d899ddf8ac08",
+       "model_id": "b6f0f881e1624a789e0f0a8521511d86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1017,7 +1017,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "056a2b7501354d75b81eeabe81561311",
+       "model_id": "05fe8aebd9314c7ea488951ae64ad07f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1039,7 +1039,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7087f9d1b09549628b42ab586ce88c34",
+       "model_id": "fab35a3d0e5c49c18cddf468faacaedc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1070,7 +1070,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a21c9a0baab64115abc346a8aee2e8c3",
+       "model_id": "466d0034e36c4517902d67db7742688f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1092,7 +1092,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a4c7489454142a38afc92c8e22a082c",
+       "model_id": "6f63b8174a3a474484b0ff653af728cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1123,7 +1123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3829ddff7a9b4d3c9c851c65cb1993e3",
+       "model_id": "d9daa690500a417e8e7fad1266f99ef8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1145,7 +1145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1fea17fbb384fd5b57f39968aebc8df",
+       "model_id": "1f668878c8dc4fbb9b4e6b13281be577",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1176,7 +1176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf82601a5c8046b0987c114ebe14ed97",
+       "model_id": "5a02ae7bf9b54e898eb64fe7a1473c8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1198,7 +1198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2962d3f518ca4c94ad9e4136e7c8c8b5",
+       "model_id": "fe0fba615fdd43bd8264aae467ba594d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1229,7 +1229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7bb6105ff7847ed98000726d08902fb",
+       "model_id": "35fae40149bb474bb522c05744033b58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1251,7 +1251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "331d3e51a87b49de808bcb26baddc14c",
+       "model_id": "e850163e29fc4831a29962d48408544e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1282,7 +1282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e9af1b8c26642a487f7184137666286",
+       "model_id": "e9f2738138b04eaea81196b5ce26286c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1304,7 +1304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6949a4581874a3d98a645f128a806fc",
+       "model_id": "932379c2f0994ef9bccb5f0a0dc581bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1642,17 +1642,17 @@
           1
          ],
          "y": [
+          0.0732538330494037,
           0.0766609880749574,
-          0.0885860306643952,
-          0.0954003407155025,
-          0.1090289608177172,
-          0.1022146507666098,
-          0.1056218057921635,
-          0.1175468483816013,
-          0.1277683134582623,
-          0.1175468483816013,
-          0.1243611584327086,
-          0.1243611584327086
+          0.0749574105621805,
+          0.0851788756388415,
+          0.0749574105621805,
+          0.0783645655877342,
+          0.0817717206132879,
+          0.0783645655877342,
+          0.0868824531516184,
+          0.0868824531516184,
+          0.0885860306643952
          ]
         },
         {
@@ -1712,17 +1712,17 @@
           1
          ],
          "y": [
+          0.0732538330494037,
           0.0817717206132879,
-          0.0936967632027257,
-          0.0954003407155025,
-          0.1158432708688245,
-          0.1039182282793867,
-          0.110732538330494,
-          0.1277683134582623,
-          0.1362862010221465,
-          0.1260647359454855,
-          0.1243611584327086,
-          0.1294718909710391
+          0.0749574105621805,
+          0.0851788756388415,
+          0.0766609880749574,
+          0.0766609880749574,
+          0.0834752981260647,
+          0.0783645655877342,
+          0.0868824531516184,
+          0.0885860306643952,
+          0.0919931856899489
          ]
         }
        ],
@@ -2741,17 +2741,17 @@
          ],
          "xaxis": "x",
          "y": [
+          0.0732538330494037,
           0.0766609880749574,
-          0.0885860306643952,
-          0.0954003407155025,
-          0.1090289608177172,
-          0.1022146507666098,
-          0.1056218057921635,
-          0.1175468483816013,
-          0.1277683134582623,
-          0.1175468483816013,
-          0.1243611584327086,
-          0.1243611584327086
+          0.0749574105621805,
+          0.0851788756388415,
+          0.0749574105621805,
+          0.0783645655877342,
+          0.0817717206132879,
+          0.0783645655877342,
+          0.0868824531516184,
+          0.0868824531516184,
+          0.0885860306643952
          ],
          "yaxis": "y"
         },
@@ -2829,17 +2829,17 @@
          ],
          "xaxis": "x",
          "y": [
+          0.0732538330494037,
           0.0817717206132879,
-          0.0936967632027257,
-          0.0954003407155025,
-          0.1158432708688245,
-          0.1039182282793867,
-          0.110732538330494,
-          0.1277683134582623,
-          0.1362862010221465,
-          0.1260647359454855,
-          0.1243611584327086,
-          0.1294718909710391
+          0.0749574105621805,
+          0.0851788756388415,
+          0.0766609880749574,
+          0.0766609880749574,
+          0.0834752981260647,
+          0.0783645655877342,
+          0.0868824531516184,
+          0.0885860306643952,
+          0.0919931856899489
          ],
          "yaxis": "y"
         }
@@ -3701,6 +3701,202 @@
     "fig = px.line(df_results, x=\"train_size\", y=\"hr\", color='algorithm', title='HR x Train size')\n",
     "fig.show()\n",
     "fig.write_html('results-v8/hr_x_train_size.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train = pd.read_csv(train_data)\n",
+    "df_test = pd.read_csv(test_data)\n",
+    "\n",
+    "df_full = pd.concat([df_train, df_test])\n",
+    "\n",
+    "df_full['user_id'] = LabelEncoder().fit_transform(df_full['user_id'])\n",
+    "df_full['item_id'] = LabelEncoder().fit_transform(df_full['item_id'])\n",
+    "\n",
+    "num_users = df_full['user_id'].nunique()\n",
+    "num_items = df_full['item_id'].nunique()\n",
+    "\n",
+    "split_index = int(len(df_full) * (1 - 0.1))\n",
+    "df_train_full = df_full[:split_index]\n",
+    "df_test = df_full[split_index:]\n",
+    "\n",
+    "initial_df_train = df_train_full[:int(len(df_train_full) * 0.5)]\n",
+    "extra_df_train = df_train_full[int(len(df_train_full) * 0.5):]\n",
+    "extra_df_train = extra_df_train[(extra_df_train['user_id'].isin(initial_df_train['user_id'])) & (extra_df_train['item_id'].isin(initial_df_train['item_id']))]\n",
+    "extra_df_train = extra_df_train.reset_index(drop=True)\n",
+    "\n",
+    "df_test = df_test[(df_test['user_id'].isin(initial_df_train['user_id'])) & (df_test['item_id'].isin(initial_df_train['item_id']))]\n",
+    "df_test = df_test.reset_index(drop=True)\n",
+    "df_test_for_evaluation = df_test[df_test['response'] == 1]\n",
+    "df_test_for_evaluation = df_test_for_evaluation.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_embeddings_model_2(Model, df, num_users, num_items, generate_embeddings=False):\n",
+    "    sparse_matrix = csr_matrix((df['response'], (df['user_id'], df['item_id'])), shape=(num_users, num_items))\n",
+    "\n",
+    "    model = Model(factors=FACTORS, random_state=1, num_threads=1)\n",
+    "    model.fit(sparse_matrix)\n",
+    "\n",
+    "    if not generate_embeddings:\n",
+    "        return model, sparse_matrix\n",
+    "    \n",
+    "    user_features_list = []\n",
+    "\n",
+    "    for user_id in df['user_id'].unique():\n",
+    "        user_factors = model.user_factors[user_id][:FACTORS]  # O BPR coloca 1 no final dos vetores latentes ?\n",
+    "        user_features_list.append([user_id] + list(user_factors))\n",
+    "\n",
+    "    df_user_features = pd.DataFrame(user_features_list, columns=['user_id'] + [f'u{i}' for i in range(FACTORS)])\n",
+    "\n",
+    "    return model, sparse_matrix, df_user_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba16d6fa4a194bfeb91531e38aa9e6f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "BPR_model_2, _, BPR_user_embeddings_2 = train_embeddings_model_2(implicit.bpr.BayesianPersonalizedRanking, initial_df_train, num_users, num_items, generate_embeddings=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e34b705ed4ba421b90225bbda6cc4106",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "BPR_model_1, _, BPR_user_embeddings_1 = train_embeddings_model(implicit.bpr.BayesianPersonalizedRanking, initial_df_train, num_users, num_items, generate_embeddings=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     user_id        u0        u1        u2        u3        u4        u5  \\\n",
+      "0        842 -0.536855  0.481539 -0.160632 -0.491842  0.103912 -0.698853   \n",
+      "1        143  0.924427 -0.817791  0.529629 -0.099200  0.961876  0.031626   \n",
+      "2        600 -0.133694  0.055763 -0.445509 -0.671046  0.047867 -0.383721   \n",
+      "3        750  0.540528  0.274020 -0.151650 -0.954779  0.299716 -0.138047   \n",
+      "4        200  0.300035 -0.325023 -0.109484  0.090175  0.270867 -0.383262   \n",
+      "..       ...       ...       ...       ...       ...       ...       ...   \n",
+      "886      844 -0.085878  0.066151  0.046355  0.021990  0.118320  0.040757   \n",
+      "887      318 -0.067304  0.020279  0.043138  0.026810  0.127318  0.067234   \n",
+      "888      201 -0.306380 -0.172767 -0.150878 -0.275612  0.153251  0.234951   \n",
+      "889      244  0.235490 -0.060085 -0.167495  0.067258  0.136094 -0.070922   \n",
+      "890       33  0.081267  0.038718  0.064978  0.046665 -0.088733 -0.189391   \n",
+      "\n",
+      "           u6        u7        u8        u9  \n",
+      "0   -0.700794 -0.894281  0.494751 -0.081034  \n",
+      "1   -0.011938 -0.065336  0.237476 -0.073117  \n",
+      "2    0.523811 -0.422157 -0.283484 -0.340286  \n",
+      "3    0.225964 -0.208484 -0.079159  0.227114  \n",
+      "4   -0.732010 -0.382828  0.676535  0.194925  \n",
+      "..        ...       ...       ...       ...  \n",
+      "886 -0.008230  0.293546  0.252613 -0.072523  \n",
+      "887  0.022858  0.329984  0.306899 -0.061046  \n",
+      "888 -0.007669 -0.660895 -0.332941 -0.040259  \n",
+      "889  0.117722 -0.072911  0.086328 -0.022871  \n",
+      "890 -0.012040  0.404147  0.372099 -0.090835  \n",
+      "\n",
+      "[891 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(BPR_user_embeddings_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.30444112  0.0427892  -0.08306112 ... -0.3396445  -0.1433266\n",
+      "   1.        ]\n",
+      " [ 0.01803787 -0.17496848  0.05106271 ...  0.5784036   0.2413053\n",
+      "   1.        ]\n",
+      " [-0.14094338  0.21060374  0.2189908  ...  0.5008001  -0.30252734\n",
+      "   1.        ]\n",
+      " ...\n",
+      " [ 0.          0.          0.         ...  0.          0.\n",
+      "   1.        ]\n",
+      " [ 0.11114974 -0.3199083  -0.10890112 ... -0.06483436  0.01914932\n",
+      "   1.        ]\n",
+      " [-0.1033766  -0.13300698 -0.42545766 ... -0.8582284  -0.35504812\n",
+      "   1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(BPR_user_embeddings_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(943, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(BPR_user_embeddings_1.shape)"
    ]
   }
  ],
