inicio codigo concats

--- a/mab2rec/testes_incremental_users_emb.ipynb
+++ b/mab2rec/testes_incremental_users_emb.ipynb
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testando os modelos MAB usando embeddings de itens"
+    "## Testando os modelos MAB usando embeddings de usuários"
    ]
   },
   {
