--- a/mab2rec/testes_otimizacao.ipynb
+++ b/mab2rec/testes_otimizacao.ipynb
@@ -2,35 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/gregorio/.conda/envs/weighted-sims/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/gregorio/.conda/envs/weighted-sims/lib/python3.8/site-packages/implicit/gpu/__init__.py:13: UserWarning: CUDA extension is built, but disabling GPU support because of 'Cuda Error: no CUDA-capable device is detected (/project/./implicit/gpu/utils.h:71)'\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'BaseMAasB' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mimplicit\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmab2rec\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BanditRecommender, LearningPolicy\n",
-      "File \u001b[0;32m~/.conda/envs/weighted-sims/lib/python3.8/site-packages/mab2rec/__init__.py:5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Copyright FMR LLC <opensource@fidelity.com>\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# SPDX-License-Identifier: Apache-2.0\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LearningPolicy, NeighborhoodPolicy\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mrec\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BanditRecommender\n",
-      "File \u001b[0;32m~/.conda/envs/weighted-sims/lib/python3.8/site-packages/mabwiser/mab.py:21\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtree\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DecisionTreeRegressor\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __author__, __copyright__, __email__, __version__\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapproximate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _LSHNearest\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclusters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _Clusters\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgreedy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _EpsilonGreedy\n",
-      "File \u001b[0;32m~/.conda/envs/weighted-sims/lib/python3.8/site-packages/mabwiser/approximate.py:14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mjoblib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Parallel, delayed\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgreedy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _EpsilonGreedy\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _Linear\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _Neighbors\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmabwiser\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopularity\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m _Popularity\n",
-      "File \u001b[0;32m~/.conda/envs/weighted-sims/lib/python3.8/site-packages/mabwiser/linear.py:137\u001b[0m\n\u001b[1;32m    133\u001b[0m         \u001b[38;5;66;03m# Calculate linucb expectation y = x * b + ucb\u001b[39;00m\n\u001b[1;32m    134\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdot(x, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbeta) \u001b[38;5;241m+\u001b[39m ucb\n\u001b[0;32m--> 137\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01m_Linear\u001b[39;00m(\u001b[43mBaseMAasB\u001b[49m):\n\u001b[1;32m    138\u001b[0m     factory \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mts\u001b[39m\u001b[38;5;124m\"\u001b[39m: _LinTS, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mucb\u001b[39m\u001b[38;5;124m\"\u001b[39m: _LinUCB, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mridge\u001b[39m\u001b[38;5;124m\"\u001b[39m: _RidgeRegression}\n\u001b[1;32m    140\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, rng: _BaseRNG, arms: List[Arm], n_jobs: \u001b[38;5;28mint\u001b[39m, backend: Optional[\u001b[38;5;28mstr\u001b[39m],\n\u001b[1;32m    141\u001b[0m                  alpha: Num, epsilon: Num, l2_lambda: Num, regression: \u001b[38;5;28mstr\u001b[39m, scale: \u001b[38;5;28mbool\u001b[39m):\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'BaseMAasB' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -47,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +305,7 @@
        "[932634 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:36<00:00,  2.42s/it]\n",
-      "100%|██████████| 461136/461136 [00:31<00:00, 14769.70it/s]\n",
-      "/tmp/ipykernel_45979/664699790.py:5: SettingWithCopyWarning: \n",
+      "100%|██████████| 15/15 [00:36<00:00,  2.46s/it]\n",
+      "100%|██████████| 461136/461136 [00:31<00:00, 14653.09it/s]\n",
+      "/tmp/ipykernel_46374/664699790.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -403,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -421,17 +395,17 @@
      "output_type": "stream",
      "text": [
       "Training LinGreedy - ALS embeddings\n",
-      "arm_to_model demorou -0.38626527786254883\n",
-      "reset_arm_to_status demorou -0.01086878776550293\n",
-      "paralel fit demorou -20.893952131271362\n",
-      "_set_arms_as_trained acabou em -8.390342473983765 segundos\n",
-      "Treino demorou 33.76591157913208\n",
+      "arm_to_model demorou -0.39460253715515137\n",
+      "reset_arm_to_status demorou -0.011788368225097656\n",
+      "paralel fit demorou -21.259541273117065\n",
+      "_set_arms_as_trained acabou em -8.359458684921265 segundos\n",
+      "Treino demorou 34.22496247291565\n",
       "Testing LinGreedy - ALS embeddings\n",
       "entrou\n",
       "saiu\n",
       "oi1\n",
       "Gerando as predições\n",
-      "Gerar as predições demorou 3.563124179840088 segundos\n",
+      "Gerar as predições demorou 3.4931259155273438 segundos\n",
       "Formatando as predições\n"
      ]
     },
@@ -439,17 +413,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:14<00:00, 255.07it/s]\n"
+      "100%|██████████| 3799/3799 [00:15<00:00, 251.42it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatação demorou 14.898889064788818 segundos\n",
-      "predict_expectations demorou 18.509413957595825 segundos\n",
+      "Formatação demorou 15.115094184875488 segundos\n",
+      "predict_expectations demorou 18.65468978881836 segundos\n",
       "oi2\n",
-      "transformação das expectativas demorou 38.621105670928955 segundos\n",
+      "transformação das expectativas demorou 38.89238476753235 segundos\n",
       "oi3\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -458,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 238510.35it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 353840.84it/s]"
      ]
     },
     {
@@ -479,14 +453,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O restante demorou 8.507043838500977 segundos\n"
+      "O restante demorou 8.524228572845459 segundos\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 15915.19it/s]\n"
+      "100%|██████████| 3799/3799 [00:00<00:00, 15584.61it/s]\n"
      ]
     },
     {
@@ -495,7 +469,7 @@
        "114"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,17 +717,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arm_to_model demorou -0.3874397277832031\n",
-      "reset_arm_to_status demorou -0.01585555076599121\n",
-      "paralel fit demorou -20.164703130722046\n",
-      "_set_arms_as_trained acabou em -19.889243602752686 segundos\n"
+      "arm_to_model demorou -0.38094162940979004\n",
+      "reset_arm_to_status demorou -0.01191568374633789\n",
+      "paralel fit demorou -21.99544095993042\n",
+      "_set_arms_as_trained acabou em -8.346503496170044 segundos\n"
      ]
     }
    ],
@@ -769,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +751,7 @@
      "output_type": "stream",
      "text": [
       "Gerando as predições\n",
-      "Gerar as predições demorou 0.12679529190063477 segundos\n"
+      "Gerar as predições demorou 0.10736441612243652 segundos\n"
      ]
     },
     {
@@ -787,7 +761,7 @@
        "       0.49999844])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,15 +773,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gerando as predições\n",
-      "Gerar as predições demorou 0.13171768188476562 segundos\n",
+      "Gerando as predições\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gerar as predições demorou 0.1278679370880127 segundos\n",
       "Formatando as predições\n"
      ]
     },
@@ -815,14 +795,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 286.99it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 316.22it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatação demorou 0.007084369659423828 segundos\n"
+      "Formatação demorou 0.006684541702270508 segundos\n"
      ]
     },
     {
@@ -1838,7 +1818,7 @@
        " ...}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1859,7 +1839,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1870,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1879,15 +1859,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gerando as predições\n",
-      "Gerar as predições demorou 4.0329015254974365 segundos\n"
+      "Gerando as predições\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gerar as predições demorou 4.034554958343506 segundos\n"
      ]
     }
    ],
@@ -1897,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1891,7 @@
      "output_type": "stream",
      "text": [
       "Gerando as predições\n",
-      "Gerar as predições demorou 2.9999358654022217 segundos\n",
+      "Gerar as predições demorou 3.1652419567108154 segundos\n",
       "Formatando as predições\n"
      ]
     },
@@ -1913,14 +1899,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:14<00:00, 266.39it/s]"
+      "100%|██████████| 3799/3799 [00:14<00:00, 267.38it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatação demorou 14.264642000198364 segundos\n"
+      "Formatação demorou 14.212545156478882 segundos\n"
      ]
     },
     {
@@ -1937,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1932,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1957,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2080,24 +2066,18 @@
      "output_type": "stream",
      "text": [
       "Training LinGreedy - ALS embeddings\n",
-      "arm_to_model demorou -0.3791170120239258\n",
-      "reset_arm_to_status demorou -0.01372838020324707\n",
-      "paralel fit demorou -21.17717933654785\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_set_arms_as_trained acabou em -19.91711449623108 segundos\n",
-      "Treino demorou 45.66488790512085\n",
+      "arm_to_model demorou -0.3638744354248047\n",
+      "reset_arm_to_status demorou -0.011136054992675781\n",
+      "paralel fit demorou -20.427876949310303\n",
+      "_set_arms_as_trained acabou em -8.345088243484497 segundos\n",
+      "Treino demorou 33.14767861366272\n",
       "Testing LinGreedy - ALS embeddings\n",
       "entrou\n",
       "saiu\n",
       "oi1\n",
       "Gerando as predições\n",
-      "Gerar as predições demorou 3.181675910949707 segundos\n",
-      "predict_expectations demorou 3.208477020263672 segundos\n",
+      "Gerar as predições demorou 2.4542829990386963 segundos\n",
+      "predict_expectations demorou 2.4795658588409424 segundos\n",
       "oi2\n",
       "criando matriz de exclusão de arms\n"
      ]
@@ -2106,7 +2086,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 283329.38it/s]"
+      "100%|██████████| 3799/3799 [00:00<00:00, 261400.02it/s]"
      ]
     },
     {
@@ -2127,14 +2107,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O restante demorou 8.084055185317993 segundos\n"
+      "O restante demorou 8.076795101165771 segundos\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3799/3799 [00:00<00:00, 16001.21it/s]\n"
+      "100%|██████████| 3799/3799 [00:00<00:00, 15398.57it/s]\n"
      ]
     },
     {
@@ -2143,7 +2123,7 @@
        "114"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
